change height of classe overflow to fixed

--- a/src/app/todo/todo.component.css
+++ b/src/app/todo/todo.component.css
@@ -38,7 +38,7 @@
 }
 
 .lista-overflow{
-    height: 50vh;
+    height: 400px;
     overflow-y: auto;
 }
 .lista-overflow-classes{
